--- a/app/src/main/res/layout/pet_window_big.xml
+++ b/app/src/main/res/layout/pet_window_big.xml
@@ -34,6 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
+                android:textColor="#000000"
                 android:text="闹钟" />
         </LinearLayout>
 
@@ -57,6 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
+                android:textColor="#000000"
                 android:text="设置" />
         </LinearLayout>
 
@@ -80,6 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
+                android:textColor="#000000"
                 android:text="隐藏" />
         </LinearLayout>
 
