develop petmessagewindow,petmenu...

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/about_btn" />
+    <Button
+        android:id="@+id/test_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="test"/>
 
 
 </LinearLayout>
