--- a/app/src/main/res/layout/pet_window_small.xml
+++ b/app/src/main/res/layout/pet_window_small.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pet_window_small_layout"
     android:orientation="vertical"
     android:layout_width="50dp"
     android:layout_height="50dp">
     <ImageView
         android:id="@+id/pet_imageview"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
