--- a/app/src/main/res/layout/pet_message_window.xml
+++ b/app/src/main/res/layout/pet_message_window.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:id="@+id/pet_msg_window_bg"
-    >
-    <TextView
-        android:id="@+id/msg_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:maxEms="9"
-        android:textColor="#ffffff" />
-</RelativeLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pet_msg_window_layout"
+    android:orientation="vertical"
+    android:layout_width="162dp"
+    android:layout_height="48dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/pet_msg_window_bg"
+        >
+        <TextView
+            android:id="@+id/msg_textview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="#ffffff" />
+    </RelativeLayout>
 
+</LinearLayout>
