--- a/app/src/main/res/layout/pet_message_window.xml
+++ b/app/src/main/res/layout/pet_message_window.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/pet_msg_window_layout"
-    android:orientation="vertical"
-    android:layout_width="162dp"
-    android:layout_height="48dp">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/pet_msg_window_bg"
-        >
-        <TextView
-            android:id="@+id/msg_textview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textColor="#ffffff" />
-    </RelativeLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pet_msg_window_bg"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/msg_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxEms="9"
+        android:gravity="center"
+        android:textColor="#ffffff" />
+</RelativeLayout>
+
