--- a/app/src/main/res/menu/combine_menu.xml
+++ b/app/src/main/res/menu/combine_menu.xml
@@ -7,7 +7,7 @@
     <item android:id="@+id/secure_connect_scan"
         android:title="Connect a device - Secure"
         android:orderInCategory="100"
-        android:icon="@drawable/bluetooth_scan"
+        android:icon="@drawable/bluetooth_search"
         app:showAsAction="ifRoom"/>
 
 
