--- a/app/src/main/res/layout/pet_window_small.xml
+++ b/app/src/main/res/layout/pet_window_small.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="60dp"
     android:layout_height="60dp">
-    <ImageView
+    <pl.droidsonroids.gif.GifImageView
         android:id="@+id/pet_imageview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
