--- a/app/src/main/res/drawable/btn_bg_pressed.xml
+++ b/app/src/main/res/drawable/btn_bg_pressed.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners
-        android:radius="10dp"/>
-    <stroke
-        android:width="5dp"
+    android:shape="ring"
+    android:useLevel="false"
+    android:thickness="3dp"
+    >
+    <solid
         android:color="#000000"/>
+
 
 </shape>
